# fastapi-pytest

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2024_04_02_1904-9ac5ba2c8c9a_add.py
src/api_v1/: __init__.py
src/api_v1/users/: crud.py  schemas.py  views.py
src/core/: __init__.py  settings.py
src/database/: __init__.py  db_manager.py
src/database/models/: base.py  user_model.py
src/tests/: conftest.py  db_utils.py  test_users.py
