[tool.poetry]
name = "fastapi-pytest"
version = "0.1.0"
description = ""
authors = ["DinarDi <dinktmt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
yarl = "^1.9.4"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
